Bug 1857935 Share dropdown styling
Fix now forces the dropdown box to be wider to fit in the longest
unwrapped line, and has margin on left to align all text away from
usericon, and a margin on right to stop horizontal scroll. The name
is regular weight, and the rest of the info are in a lighter weight.
- added in stylings for text for secondary information (email etc...)

behatnotneeded

--- a/htdocs/theme/raw/sass/form/_dropdown.scss
+++ b/htdocs/theme/raw/sass/form/_dropdown.scss
@@ -219,3 +219,17 @@
     background-color: $dropdown-link-hover-bg !important;
     color: $dropdown-link-hover-color !important;
 }
+
+// dropdowns on Share
+.search-user-dropdown {
+  .select2-results ul li > div {
+    margin-left: 50px;
+    margin-right: 20px; // needed so it doesn't horizontally scroll for some long ones
+    color: $theme-text-midtone-color;
+    font-size: $font-size-sm;
+    &.name {
+      color: $theme-text-color;
+      font-size: $font-size-base;
+    }
+  }
+}
